--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
   "theme_color": "#3b82f6",      
   "icons": [
     {
-      "src": "images/icon-192x192.png", /* Replace with your 192x192 icon path */
+      "src": "images/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "images/icon-512x512.png", /* Replace with your 512x512 icon path */
+      "src": "images/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
